package(default_visibility = ["//visibility:public"])

# This constraint represents the dimension that guides the Pico SDK build. This
# constraint will only ever enumerate specific MCUs (and the host), and does NOT
# cover the differences from board-to-board.
constraint_setting(
    name = "sdk_target",
    default_constraint_value = "host",
)

# This constraint value is used to guide the host build.
constraint_value(
    name = "host",
    constraint_setting = ":sdk_target",
)

# This constraint value is used to guide parts of the build that are specific
# to the rp2040.
constraint_value(
    name = "rp2040",
    constraint_setting = ":sdk_target",
)

constraint_setting(
    name = "wireless_support",
    default_constraint_value = "no_wireless",
)

constraint_value(
    name = "no_wireless",
    constraint_setting = ":wireless_support",
)

constraint_value(
    name = "cyw43_wireless",
    constraint_setting = ":wireless_support",
)

config_setting(
    name = "is_pico_w",
    flag_values = {"//bazel/config:PICO_BOARD": "pico_w"},
)

config_setting(
    name = "pico_baremetal_enabled",
    flag_values = {"//bazel/config:PICO_BARE_METAL": "True"},
)

config_setting(
    name = "pico_no_gc_sections_enabled",
    flag_values = {"//bazel/config:PICO_NO_GC_SECTIONS": "True"},
)

config_setting(
    name = "pico_cxx_enable_exceptions_enabled",
    flag_values = {"//bazel/config:PICO_CXX_ENABLE_EXCEPTIONS": "True"},
)

config_setting(
    name = "pico_cxx_enable_rtti_enabled",
    flag_values = {"//bazel/config:PICO_CXX_ENABLE_RTTI": "True"},
)

config_setting(
    name = "pico_cxx_enable_cxa_atexit_enabled",
    flag_values = {"//bazel/config:PICO_CXX_ENABLE_RTTI": "True"},
)

config_setting(
    name = "pico_stdio_uart_enabled",
    flag_values = {"//bazel/config:PICO_STDIO_UART": "True"},
)

config_setting(
    name = "pico_stdio_usb_enabled",
    flag_values = {"//bazel/config:PICO_STDIO_USB": "True"},
)

config_setting(
    name = "pico_stdio_semihosting_enabled",
    flag_values = {"//bazel/config:PICO_STDIO_SEMIHOSTING": "True"},
)

config_setting(
    name = "pico_use_default_max_page_size_enabled",
    flag_values = {"//bazel/config:PICO_USE_DEFAULT_MAX_PAGE_SIZE": "True"},
)

config_setting(
    name = "pico_no_target_name_enabled",
    flag_values = {"//bazel/config:PICO_NO_TARGET_NAME": "True"},
)

config_setting(
    name = "pico_btstack_config_unset",
    flag_values = {"//bazel/config:PICO_BTSTACK_CONFIG": "@pico-sdk//bazel:empty_cc_lib"},
)

config_setting(
    name = "pico_lwip_config_unset",
    flag_values = {"//bazel/config:PICO_LWIP_CONFIG": "@pico-sdk//bazel:empty_cc_lib"},
)

config_setting(
    name = "pico_freertos_unset",
    flag_values = {"//bazel/config:PICO_FREERTOS_LIB": "@pico-sdk//bazel:empty_cc_lib"},
)
