package(default_visibility = ["//visibility:public"])

platform(
    name = "rp2040",
    constraint_values = [
        "@pico-sdk//bazel/constraint:rp2",
        "@pico-sdk//bazel/constraint:rp2040",
        "@platforms//cpu:armv6-m",
        "@pw_toolchain//constraints/arm_mcpu:cortex-m0",
    ],
)
