package(default_visibility = ["//visibility:public"])

platform(
    name = "rp2040",
    constraint_values = [
        "@pico-sdk//bazel/constraint:rp2040",
        "@platforms//cpu:armv6-m",  # This is just FYI.
    ],
)

# For now, the bootloader is effectively the same platform as the rp2040.
platform(
    name = "rp2040_bootloader",
    parents = [":rp2040"],
)
